--- a/notebooks/query_embedding.ipynb
+++ b/notebooks/query_embedding.ipynb
@@ -43,6 +43,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pretty print the list of results\n",
+    "def pretty_print(results):\n",
+    "\n",
+    "    for result in results:\n",
+    "        print(f\"{result['title']} ({result['category']}) ({result['@search.score']})\")\n",
+    "        print(f\"{result['content'][:200]}...\")\n",
+    "        print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,18 +76,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Query the Azure Cognitive Search index using the REST API"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Query the Azure Cognitive Search index using the REST API\n",
     "\n",
     "request = {\n",
     "    \"vector\": {\n",
@@ -96,7 +105,9 @@
     "response = httpx.post(url, json=request, headers=headers)\n",
     "response.raise_for_status()\n",
     "\n",
-    "results = response.json()[\"value\"]"
+    "results = response.json()[\"value\"]\n",
+    "\n",
+    "pretty_print(results)"
    ]
   },
   {
@@ -105,11 +116,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pretty print the list of results\n",
-    "for result in results:\n",
-    "    print(f\"{result['title']} ({result['category']}) ({result['@search.score']})\")\n",
-    "    print(f\"{result['content'][:200]}...\")\n",
-    "    print()"
+    "# Constrain results using a filter query\n",
+    "\n",
+    "request = {\n",
+    "    \"vector\": {\n",
+    "        \"value\": query_embeddings,\n",
+    "        \"fields\": \"contentVector\",\n",
+    "        \"k\": 5,\n",
+    "    },\n",
+    "    \"select\": \"title, content, category\",\n",
+    "    \"filter\": \"category eq 'Analytics'\"\n",
+    "}\n",
+    "\n",
+    "url = (\n",
+    "    f\"https://{AZURE_COG_SEARCH_SERVICE_NAME}.search.windows.net/indexes/{AZURE_COG_SEARCH_INDEX_NAME}\"\n",
+    "    f\"/docs/search?api-version={AZURE_COG_SEARCH_API_VERSION}\"\n",
+    ")\n",
+    "\n",
+    "headers = {\n",
+    "    \"Content-Type\": \"application/json\",\n",
+    "    \"api-key\": AZURE_COG_SEARCH_API_KEY,\n",
+    "}\n",
+    "\n",
+    "response = httpx.post(url, json=request, headers=headers)\n",
+    "response.raise_for_status()\n",
+    "\n",
+    "results = response.json()[\"value\"]\n",
+    "\n",
+    "pretty_print(results)"
    ]
   }
  ],
