Updated env variables

--- a/notebooks/content_embedding.ipynb
+++ b/notebooks/content_embedding.ipynb
@@ -8,6 +8,7 @@
     "\n",
     "- `AZURE_OPENAI_API_KEY` - Your OpenAI API key\n",
     "- `AZURE_OPENAI_ENDPOINT` - Your OpenAI endpoint\n",
+    "- `AZURE_OPENAI_EMBEDDING_MODEL_DEPLOYMENT_NAME` - Your Azure OpenAI Embedding model deployment name\n",
     "- `AZURE_COG_SEARCH_API_KEY` - Your Azure Cognitive Search API key\n",
     "- `AZURE_COG_SEARCH_ENDPOINT` - Your Azure Cognitive Search endpoint"
    ]
@@ -19,9 +20,11 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from dotenv import load_dotenv\n",
     "import openai\n",
     "from openai.embeddings_utils import get_embedding\n",
     "\n",
+    "load_dotenv()\n",
     "\n",
     "AZURE_COG_SEARCH_API_KEY = os.environ[\"AZURE_COG_SEARCH_API_KEY\"]\n",
     "AZURE_COG_SEARCH_SERVICE_NAME = os.environ[\"AZURE_COG_SEARCH_SERVICE_NAME\"]\n",
@@ -45,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The foloowing is an example of creating an embedding for a piece of text. You would typically chunk your text into smaller pieces and create embeddings for each piece and then store them in Azure Cognitive Search along with the text for a reference to the original text."
+    "The following is an example of creating an embedding for a piece of text. You would typically chunk your text into smaller pieces and create embeddings for each piece and then store them in Azure Cognitive Search along with the text for a reference to the original text."
    ]
   },
   {
@@ -63,7 +66,7 @@
     "\n",
     "query_embeddings = get_embedding(content, OPENAI_EMBEDDING_ENGINE)\n",
     "\n",
-    "print(\"\\n\".join(map(str, query_embeddings[:100])))\n"
+    "print(\"\\n\".join(map(str, query_embeddings[:1536])))\n"
    ]
   }
  ],
