--- a/notebooks/query_embedding.ipynb
+++ b/notebooks/query_embedding.ipynb
@@ -8,6 +8,7 @@
     "\n",
     "- `AZURE_OPENAI_API_KEY` - Your OpenAI API key\n",
     "- `AZURE_OPENAI_ENDPOINT` - Your OpenAI endpoint\n",
+    "- `AZURE_OPENAI_EMBEDDING_MODEL_DEPLOYMENT_NAME` - Your Azure OpenAI Embedding model deployment name\n",
     "- `AZURE_COG_SEARCH_API_KEY` - Your Azure Cognitive Search API key\n",
     "- `AZURE_COG_SEARCH_ENDPOINT` - Your Azure Cognitive Search endpoint"
    ]
@@ -19,10 +20,12 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from dotenv import load_dotenv\n",
     "import httpx\n",
     "import openai\n",
     "from openai.embeddings_utils import get_embedding\n",
     "\n",
+    "load_dotenv()\n",
     "\n",
     "AZURE_COG_SEARCH_API_KEY = os.environ[\"AZURE_COG_SEARCH_API_KEY\"]\n",
     "AZURE_COG_SEARCH_SERVICE_NAME = os.environ[\"AZURE_COG_SEARCH_SERVICE_NAME\"]\n",
