--- a/notebooks/content_embedding.ipynb
+++ b/notebooks/content_embedding.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "query_embeddings = get_embedding(content, OPENAI_EMBEDDING_ENGINE)\n",
     "\n",
-    "print(\"\\n\".join(map(str, query_embeddings[:1536])))\n"
+    "print(\"\\n\".join(map(str, query_embeddings[:1536])))"
    ]
   }
  ],
