--- a/notebooks/query_embedding.ipynb
+++ b/notebooks/query_embedding.ipynb
@@ -53,7 +53,6 @@
    "source": [
     "# pretty print the list of results\n",
     "def pretty_print(results):\n",
-    "\n",
     "    for result in results:\n",
     "        print(f\"{result['title']} ({result['category']}) ({result['@search.score']})\")\n",
     "        print(f\"{result['content'][:200]}...\")\n",
@@ -128,7 +127,7 @@
     "        \"k\": 5,\n",
     "    },\n",
     "    \"select\": \"title, content, category\",\n",
-    "    \"filter\": \"category eq 'Analytics'\"\n",
+    "    \"filter\": \"category eq 'Analytics'\",\n",
     "}\n",
     "\n",
     "url = (\n",
